force-app/main/default/objects/DRE__DTE_Result__c/DRE__DTE_Result__c.object-meta.xml
<CustomObject>
    <label>DTE Result</label>
    <nameField>
        <displayFormat>DTERES-{00000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DTE Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>