force-app/main/default/objects/DRE__DTE_Result__c/fields/DRE__CPU_Usage__c.field-meta.xml
<CustomField>
    <fullName>DRE__CPU_Usage__c</fullName>
    <description>CPU time used in milliseconds</description>
    <label>Time (ms)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>