force-app/main/default/objects/DRE__DTE_Result__c/fields/DRE__DML_Rows_Usage__c.field-meta.xml
<CustomField>
    <fullName>DRE__DML_Rows_Usage__c</fullName>
    <description>DML rows used</description>
    <label>Database Rows</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>