force-app/main/default/objects/DRE__DTE_Result__c/fields/DRE__DML_Usage__c.field-meta.xml
<CustomField>
    <fullName>DRE__DML_Usage__c</fullName>
    <description>DML statements used</description>
    <label>Database Calls</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>