force-app/main/default/objects/DRE__DTE_Result__c/fields/DRE__DTE_Plan__c.field-meta.xml
<CustomField>
    <fullName>DRE__DTE_Plan__c</fullName>
    <label>DTE Plan</label>
    <referenceTo>DRE__DTE_Plan__c</referenceTo>
    <relationshipLabel>Results</relationshipLabel>
    <relationshipName>DTE_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>