force-app/main/default/objects/DRE__DTE_Result__c/fields/DRE__Email_Usage__c.field-meta.xml
<CustomField>
    <fullName>DRE__Email_Usage__c</fullName>
    <label>Emails</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>