force-app/main/default/objects/DRE__DTE_Result__c/fields/DRE__Message__c.field-meta.xml
<CustomField>
    <fullName>DRE__Message__c</fullName>
    <label>Message</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>