force-app/main/default/objects/DRE__DTE_Result__c/fields/DRE__SOQL_Rows_Usage__c.field-meta.xml
<CustomField>
    <fullName>DRE__SOQL_Rows_Usage__c</fullName>
    <description>SOQL rows used</description>
    <label>Query Rows</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>