force-app/main/default/objects/DRE__DTE_Result__c/fields/DRE__SOQL_Usage__c.field-meta.xml
<CustomField>
    <fullName>DRE__SOQL_Usage__c</fullName>
    <description>SOQL statements used</description>
    <label>Queries</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>